자동차 경주 리팩터링 (#4065)
* [study] learn about string and set

* [study]StringCalcuratorTest 작성

* [study] 문자열 계산기 개발

* [study] 문자열 계산기 수정

* [study] 문자열 계산기 수정

* [study] 문자열 계산기 수정

* [study] 레이싱카 개발

* [study] 레이싱카 개발

* [study] 자동차경주

* [study]자동차 경주

* [study] 자동차 경주

* [study] 자동차 경주

* [study] 자동차 경주

* [study] 자동차 경주

* [study] 자동차 경주

* 구현기능목록 추가

* [study] 자동차 경주

* [study] 자동차 생성

* [study] 자동차 경주
- PR review 내용 수정

* [study] 자동차 경주
- PR review 내용 수정

* [study] 자동차 경주
- PR review 내용 수정

* [study] 자동차 경주
- PR review 내용 수정

* [study] 자동차 경주 리팩터링
- develop

* [study] Car 리팩토링
- mvc 패턴으로 리팩토링

---------

Co-authored-by: david.g <david.g@kakaopaysec.com>